--- a/telemetry/package.json
+++ b/telemetry/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "three": "^0.127.0",
+    "three-orbit-controls": "^82.1.0",
     "web-vitals": "^0.2.4",
     "webgl-plot": "^0.5.6"
   },
