--- a/telemetry/package.json
+++ b/telemetry/package.json
@@ -11,10 +11,12 @@
     "@testing-library/user-event": "^12.2.2",
     "chart.js": "^2.9.3",
     "fontsource-roboto": "^3.0.3",
+    "leaflet": "^1.7.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
+    "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "three": "^0.127.0",
