--- a/telemetry/package.json
+++ b/telemetry/package.json
@@ -5,8 +5,9 @@
   "homepage": "./",
   "dependencies": {
     "@fontsource/roboto": "^4.2.3",
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
