feat: add daq3test window along with capfill graph, add wildcard field key

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "start-main": "cross-env VARIANT=main electron .",
+    "start-daq3-test": "cross-env VARIANT=daq3test electron .",
     "start-aux": "cross-env VARIANT=aux electron .",
     "build-electron-main": "cp -r telemetry/build ./build && cp -r electron/. build/electron",
     "package": "electron-builder build --mac -c.extraMetadata.main=build/electron/main.js --publish never",
