--- a/telemetry/package.json
+++ b/telemetry/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "~5.3.0",
     "react-scripts": "~4.0.3",
     "react-virtuoso": "~2.2.1",
+    "three": "~0.136.0",
+    "three-orbit-controls": "~82.1.0",
     "webgl-plot": "~0.6.3"
   },
   "scripts": {
