--- a/telemetry/package.json
+++ b/telemetry/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "~7.2.1",
     "clsx": "~1.1.1",
     "lodash.throttle": "~4.1.1",
+    "mapbox-gl": "~2.6.1",
     "moment": "~2.29.1",
     "react": "~17.0.2",
     "react-dom": "~17.0.2",
+    "react-map-gl": "~6.1.18",
     "react-router-dom": "~5.3.0",
     "react-scripts": "~4.0.3",
     "react-virtuoso": "~2.2.1",
