--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     }
   },
   "devDependencies": {
+    "@electron/rebuild": "^3.2.10",
     "cross-env": "^7.0.2",
     "electron": "^10.1.3",
     "electron-builder": "^22.8.1",
-    "electron-rebuild": "^2.2.0",
     "mocha": "^8.3.2"
   }
 }
