--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "blessed": "^0.1.81",
     "circular-buffer": "~1.0.3",
     "electron-is-dev": "~1.2.0",
+    "gamecontroller": "^0.0.2",
     "influx": "~5.9.2",
     "lodash.throttle": "~4.1.1",
-    "moment": "~2.29.1"
+    "moment": "~2.29.1",
+    "node-hid": "^2.1.2"
   },
   "scripts": {
     "start-main": "cross-env VARIANT=main electron .",
