--- a/config/flight_window.jsonc
+++ b/config/flight_window.jsonc
@@ -211,7 +211,17 @@
 					"field": null
 				}
 			]
+		},
+		{
+			"type": "procedures",
+			"steps": [
+				"Preparations",
+				"Pressurant Fill",
+				"Propellant Fill",
+				"Pressurization",
+				"Countdown",
+				"Burn"
+			]
 		}
-
 	]
 }
