--- a/config/main.jsonc
+++ b/config/main.jsonc
@@ -1,5 +1,13 @@
 {
 	"boards": "$boards.jsonc",
+	"packets": {
+		"ac": "$boards/ac_board.jsonc",
+		"pt": "$boards/pt_board.jsonc",
+		"tc": "$boards/tc_board.jsonc",
+		"lc": "$boards/lc_board.jsonc",
+		"ereg": "$boards/ereg_board.jsonc",
+		"flightV4": "$boards/flightV4_board.jsonc"
+	},
 	"influxMap": "$influx_map.jsonc",
 	"windows": {
 		"ereg": "$ereg_window.jsonc",
