--- a/config/coldflow_controls_window.jsonc
+++ b/config/coldflow_controls_window.jsonc
@@ -3,6 +3,560 @@
 	"layout": "9-grid",
 	"slots": [
 		{
+			"type": "four-button",
+			"buttons": [
+				{
+					"id": "arm",
+					"type": "valve",
+					"name": "ARM",
+					"field": "ac1.actuatorState3",
+					"actions": {
+						"enable": {
+							"type": "on",
+							"board": "ac1",
+							"packet": 100,
+							"number": 3
+						},
+						"disable": {
+							"type": "off",
+							"board": "ac1",
+							"packet": 100,
+							"number": 3
+						}
+					},
+					"green": [0, 1]
+				},
+				{
+					"id": "mainVent",
+					"type": "valve",
+					"name": "Main Vent",
+					"field": "ac1.actuatorState2",
+					"actions": {
+						"enable": {
+							"type": "on",
+							"board": "ac1",
+							"packet": 100,
+							"number": 2
+						},
+						"disable": {
+							"type": "off",
+							"board": "ac1",
+							"packet": 100,
+							"number": 2
+						}
+					},
+					"green": [0, 1]
+				},
+                {
+					"id": "nitrousMain",
+					"type": "valve",
+					"name": "Nitrous Main",
+					"field": "ac1.actuatorState2",
+					"actions": {
+						"enable": {
+							"type": "on",
+							"board": "ac1",
+							"packet": 100,
+							"number": 2
+						},
+						"disable": {
+							"type": "off",
+							"board": "ac1",
+							"packet": 100,
+							"number": 2
+						}
+					},
+					"green": [0, 1]
+				},
+				{
+					"id": "ethaneMain",
+					"type": "valve",
+					"name": "Ethane Main",
+					"field": "ac1.actuatorState2",
+					"actions": {
+						"enable": {
+							"type": "on",
+							"board": "ac1",
+							"packet": 100,
+							"number": 2
+						},
+						"disable": {
+							"type": "off",
+							"board": "ac1",
+							"packet": 100,
+							"number": 2
+						}
+					},
+					"green": [0, 1]
+				}
+			]
+		},
+		{
+			"type": "four-button",
+			"buttons": [
+				{
+					"id": "ethaneFill",
+					"type": "timed",
+					"name": "Ethane Fill RBV",
+					"field": "ac2.actuatorState4",
+					"actions": {
+						"enable": {
+							"type": "retract-full",
+							"board": "ac2",
+							"packet": 100,
+							"number": 4
+						},
+						"disable": {
+							"type": "extend-full",
+							"board": "ac2",
+							"packet": 100,
+							"number": 4
+						},
+						"enable-timed": {
+							"type": "retract-timed",
+							"board": "ac2",
+							"packet": 100,
+							"number": 4
+						},
+						"disable-timed": {
+							"type": "extend-timed",
+							"board": "ac2",
+							"packet": 100,
+							"number": 4
+						}
+					},
+					"green": [0, 1]
+				},
+				{
+					"id": "ethaneLineVent",
+					"type": "timed",
+					"name": "ETH Line Vent RBV",
+					"field": "ac2.actuatorState5",
+					"actions": {
+						"enable": {
+							"type": "retract-full",
+							"board": "ac2",
+							"packet": 100,
+							"number": 5
+						},
+						"disable": {
+							"type": "extend-full",
+							"board": "ac2",
+							"packet": 100,
+							"number": 5
+						},
+						"enable-timed": {
+							"type": "retract-timed",
+							"board": "ac2",
+							"packet": 100,
+							"number": 5
+						},
+						"disable-timed": {
+							"type": "extend-timed",
+							"board": "ac2",
+							"packet": 100,
+							"number": 5
+						}
+					},
+					"green": [0, 1]
+				},
+				{
+					"type": null
+				},
+				{
+					"type": null
+				}
+			]
+		},
+		{
+			"type": "four-button",
+			"buttons": [
+				{
+					"id": "eregDiagnostic",
+					"type": "ereg",
+					"name": "Run Diagnostic",
+					"field": "",
+					"actions": {
+						"lox": {
+							"type": "signal",
+							"board": "oreg",
+							"packet": 204
+						},
+						"fuel": {
+							"type": "signal",
+							"board": "freg",
+							"packet": 204
+						}
+					},
+					"safe": true
+				},
+				{
+					"id": "eregAbort",
+					"type": "ereg",
+					"name": "Reset E-Reg",
+					"field": "",
+					"actions": {
+						"lox": {
+							"type": "signal",
+							"board": "oreg",
+							"packet": 133
+						},
+						"fuel": {
+							"type": "signal",
+							"board": "freg",
+							"packet": 133
+						}
+					},
+					"safe": true
+				},
+				{
+					"type": null
+				},
+				{
+					"type": null
+				}
+			]
+		},
+		{
+			"type": "four-button",
+			"buttons": [
+				{
+					"id": "nitrousGems",
+					"type": "valve",
+					"name": "Nitrous GEMS",
+					"field": "ac2.actuatorState6",
+					"actions": {
+						"enable": {
+							"type": "on",
+							"board": "ac2",
+							"packet": 100,
+							"number": 6
+						},
+						"disable": {
+							"type": "off",
+							"board": "ac2",
+							"packet": 100,
+							"number": 6
+						}
+					},
+					"green": [0, 1]
+				},
+				{
+					"id": "ethaneGems",
+					"type": "valve",
+					"name": "Ethane GEMS",
+					"field": "ac2.actuatorState7",
+					"actions": {
+						"enable": {
+							"type": "on",
+							"board": "ac2",
+							"packet": 100,
+							"number": 7
+						},
+						"disable": {
+							"type": "off",
+							"board": "ac2",
+							"packet": 100,
+							"number": 7
+						}
+					},
+					"green": [0, 1]
+				},
+				// {
+				// 	"id": "loxMain",
+				// 	"type": "valve",
+				// 	"name": "eReg Press",
+				// 	"field": "ac1.actuatorState4",
+				// 	"actions": {
+				// 		"enable": {
+				// 			"type": "on",
+				// 			"board": "ac1",
+				// 			"packet": 100,
+				// 			"number": 4
+				// 		},
+				// 		"disable": {
+				// 			"type": "off",
+				// 			"board": "ac1",
+				// 			"packet": 100,
+				// 			"number": 4
+				// 		}
+				// 	},
+				// 	"green": [0, 1]
+				// },
+				{
+					"id": "propMain",
+					"type": "valve",
+					"name": "eReg Reset",
+					"field": "ac1.actuatorState5",
+					"actions": {
+						"enable": {
+							"type": "on",
+							"board": "ac1",
+							"packet": 100,
+							"number": 5
+						},
+						"disable": {
+							"type": "off",
+							"board": "ac1",
+							"packet": 100,
+							"number": 5
+						}
+					},
+					"green": [0, 1]
+				}
+			]
+		},
+		{
+			"type": "four-button",
+			"buttons": [
+				{
+					"id": "pressFill",
+					"type": "timed",
+					"name": "Nitrous Fill RBV",
+					"field": "ac2.actuatorState0",
+					"actions": {
+						"enable": {
+							// "type": "retract-full",
+							// "board": "ac2",
+							// "packet": 100,
+							// "number": 0
+							"type": null
+						},
+						"disable": {
+							"type": "extend-full",
+							"board": "ac2",
+							"packet": 100,
+							"number": 0
+						},
+						"enable-timed": {
+							"type": "retract-timed",
+							"board": "ac2",
+							"packet": 100,
+							"number": 0
+						},
+						"disable-timed": {
+							"type": "extend-timed",
+							"board": "ac2",
+							"packet": 100,
+							"number": 0
+						}
+					},
+					"safe": true,
+					"green": [0, 1]
+				},
+				{
+					"id": "pressVent",
+					"type": "timed",
+					"name": "NOS Line Vent RBV",
+					"field": "ac2.actuatorState3",
+					"actions": {
+						"enable": {
+							"type": "retract-full",
+							"board": "ac2",
+							"packet": 100,
+							"number": 3
+						},
+						"disable": {
+							"type": "extend-full",
+							"board": "ac2",
+							"packet": 100,
+							"number": 3
+						},
+						"enable-timed": {
+							"type": "retract-timed",
+							"board": "ac2",
+							"packet": 100,
+							"number": 3
+						},
+						"disable-timed": {
+							"type": "extend-timed",
+							"board": "ac2",
+							"packet": 100,
+							"number": 3
+						}
+					},
+					"green": [0, 1]
+				},
+				{
+					"type": null
+				},
+				{
+					"type": null
+				}
+			]
+		},
+		{
+			"type": "logs"
+		},
+		{
+			"type": "four-button",
+			"buttons": [
+				// {
+				// 	"id": "pressFill2",
+				// 	"type": "timed",
+				// 	"name": "eReg Diagnostics",
+				// 	"field": "ac1.actuatorState6",
+				// 	"actions": {
+				// 		"enable": {
+				// 			// "type": "retract-full",
+				// 			// "board": "ac2",
+				// 			// "packet": 100,
+				// 			// "number": 0
+				// 			"type": null
+				// 		},
+				// 		"disable": {
+				// 			"type": "extend-full",
+				// 			"board": "ac1",
+				// 			"packet": 100,
+				// 			"number": 6
+				// 		},
+				// 		"enable-timed": {
+				// 			"type": "retract-timed",
+				// 			"board": "ac1",
+				// 			"packet": 100,
+				// 			"number": 6
+				// 		},
+				// 		"disable-timed": {
+				// 			"type": "extend-timed",
+				// 			"board": "ac1",
+				// 			"packet": 100,
+				// 			"number": 6
+				// 		}
+				// 	},
+				// 	"safe": true,
+				// 	"green": [0, 1]
+				// },
+				{
+					"id": "eregPartialOpen",
+					"type": "ereg-timed",
+					"name": "E-Reg Partial Open",
+					"field": "",
+					"actions": {
+						"lox-timed": {
+							"type": "signal-timed",
+							"board": "oreg",
+							"packet": 202
+						},
+						"fuel-timed": {
+							"type": "signal-timed",
+							"board": "freg",
+							"packet": 202
+						}
+					},
+					"safe": true
+				},
+				{
+					"type": null
+				},
+				{
+					"id": "launchEnable",
+					"type": "switch",
+					"name": "Launch Enable",
+					"field": "",
+					"actions": {
+						"enable": {
+							"type": "enable",
+							"id": "launch"
+						},
+						"disable": {
+							"type": "disable",
+							"id": "launch"
+						}
+					}
+				}
+			]
+		},
+		{
+			"type": "launch"
+		},
+		{
+			"type": "four-button",
+			"buttons": [
+				{
+					"id": "propMain",
+					"type": "valve",
+					"name": "NOS EMERGENCY VENT",
+					"field": "ac1.actuatorState5",
+					"actions": {
+						"enable": {
+							"type": "on",
+							"board": "ac1",
+							"packet": 100,
+							"number": 5
+						},
+						"disable": {
+							"type": "off",
+							"board": "ac1",
+							"packet": 100,
+							"number": 5
+						}
+					},
+					"green": [0, 1]
+				},
+				{
+					"id": "propMain",
+					"type": "valve",
+					"name": "ETH EMERGENCY VENT",
+					"field": "ac1.actuatorState5",
+					"actions": {
+						"enable": {
+							"type": "on",
+							"board": "ac1",
+							"packet": 100,
+							"number": 5
+						},
+						"disable": {
+							"type": "off",
+							"board": "ac1",
+							"packet": 100,
+							"number": 5
+						}
+					},
+					"green": [0, 1]
+				},
+				{
+					"id": "propMain",
+					"type": "valve",
+					"name": "NOS EMERGENCY DUMP",
+					"field": "ac1.actuatorState5",
+					"actions": {
+						"enable": {
+							"type": "on",
+							"board": "ac1",
+							"packet": 100,
+							"number": 5
+						},
+						"disable": {
+							"type": "off",
+							"board": "ac1",
+							"packet": 100,
+							"number": 5
+						}
+					},
+					"green": [0, 1]
+				},
+                {
+					"id": "propMain",
+					"type": "valve",
+					"name": "ETH EMERGENCY DUMP",
+					"field": "ac1.actuatorState5",
+					"actions": {
+						"enable": {
+							"type": "on",
+							"board": "ac1",
+							"packet": 100,
+							"number": 5
+						},
+						"disable": {
+							"type": "off",
+							"board": "ac1",
+							"packet": 100,
+							"number": 5
+						}
+					},
+					"green": [0, 1]
+				}
+			]
 		}
 	]
 }
