--- a/config/boards_status_window.jsonc
+++ b/config/boards_status_window.jsonc
@@ -3,6 +3,250 @@
 	"layout": "9-grid",
 	"slots": [
 		{
-		}
+			"type": "six-square",
+			"values": [
+				{
+					"field": "ac1.acSupply24Voltage",
+					"name": "AC1 Voltage",
+					"units": "V"
+				},
+				{
+					"field": "ac2.acSupply24Voltage",
+					"name": "AC2 Voltage",
+					"units": "V"
+				},
+				{
+					"field": "ac3.acSupply24Voltage",
+					"name": "AC3 Voltage",
+					"units": "V"
+				},
+				{
+					"field": "ac1.acSupply24Current",
+					"name": "AC1 Current",
+					"units": "mA"
+				},
+				{
+					"field": "ac2.acSupply24Current",
+					"name": "AC2 Current",
+					"units": "mA"
+				},
+				{
+					"field": "ac3.acSupply24Current",
+					"name": "AC3 Current",
+					"units": "mA"
+				}
+			]
+		},
+		{
+			"type": "six-square",
+			"values": [
+				{
+					"field": "pt1.ptSupply24Voltage",
+					"name": "PT1 Voltage",
+					"units": "V"
+				},
+				{
+					"field": "pt2.ptSupply24Voltage",
+					"name": "PT2 Voltage",
+					"units": "V"
+				},
+				{
+					"field": "pt3.ptSupply24Voltage",
+					"name": "PT3 Voltage",
+					"units": "V"
+				},
+				{
+					"field": "pt1.ptSupply24Current",
+					"name": "PT1 Current",
+					"units": "mA"
+				},
+				{
+					"field": "pt2.ptSupply24Current",
+					"name": "PT2 Current",
+					"units": "mA"
+				},
+				{
+					"field": "pt3.ptSupply24Current",
+					"name": "PT3 Current",
+					"units": "mA"
+				}
+			]
+		},
+		{
+			"type": "six-square",
+			"values": [
+				{
+					"field": "lc1.lcSupply24Voltage",
+					"name": "LC1 Voltage",
+					"units": "V"
+				},
+				{
+					"field": "lc2.lcSupply24Voltage",
+					"name": "LC2 Voltage",
+					"units": "V"
+				},
+				{
+					"field": null
+				},
+				{
+					"field": "lc1.lcSupply24Current",
+					"name": "LC1 Current",
+					"units": "mA"
+				},
+				{
+					"field": "lc2.lcSupply24Current",
+					"name": "LC2 Current",
+					"units": "mA"
+				},
+				{
+					"field": null
+				}
+			]
+		},
+		{
+			"type": "six-square",
+			"values": [
+				{
+					"field": "tc.tcSupply24Voltage",
+					"name": "TC Voltage",
+					"units": "V"
+				},
+				{
+					"field": null
+				},
+				{
+					"field": null
+				},
+				{
+					"field": "tc.tcSupply24Current",
+					"name": "TC Current",
+					"units": "mA"
+				},
+				{
+					"field": null
+				},
+				{
+					"field": null
+				}
+			]
+		},
+		{
+			"type": "E-Reg Moment"
+		},
+		{
+			"type": "logs"
+		},
+		{
+			"type": "four-button",
+			"buttons": [
+				{
+					"id": "zeroPT1",
+					"type": "ereg-timed",
+					"name": "Zero PT1",
+					"field": "",
+					"actions": {
+						"lox-timed": {
+							"type": "zero",
+							"board": "pt1",
+							"packet": 100
+						},
+						"fuel-timed": {
+							"type": "zero",
+							"board": "pt1",
+							"packet": 100
+						}
+					},
+					"safe": true
+				},
+				{
+					"id": "zeroPT2",
+					"type": "ereg-timed",
+					"name": "Zero PT2",
+					"field": "",
+					"actions": {
+						"lox-timed": {
+							"type": "zero",
+							"board": "pt2",
+							"packet": 100
+						},
+						"fuel-timed": {
+							"type": "zero",
+							"board": "pt2",
+							"packet": 100
+						}
+					},
+					"safe": true
+				},
+				{
+					"id": "zeroPT3",
+					"type": "ereg-timed",
+					"name": "Zero PT3",
+					"field": "",
+					"actions": {
+						"lox-timed": {
+							"type": "zero",
+							"board": "pt3",
+							"packet": 100
+						},
+						"fuel-timed": {
+							"type": "zero",
+							"board": "pt3",
+							"packet": 100
+						}
+					},
+					"safe": true
+				},
+				{
+					"type": null
+				}
+			]
+		},
+		{
+			"type": "four-button",
+			"buttons": [
+				{
+					"id": "zeroLC1",
+					"type": "ereg-timed",
+					"name": "Zero LC1",
+					"field": "",
+					"actions": {
+						"lox-timed": {
+							"type": "zero",
+							"board": "lc1",
+							"packet": 100
+						},
+						"fuel-timed": {
+							"type": "zero",
+							"board": "lc1",
+							"packet": 100
+						}
+					},
+					"safe": true
+				},
+				{
+					"id": "zeroLC2",
+					"type": "ereg-timed",
+					"name": "Zero LC2",
+					"field": "",
+					"actions": {
+						"lox-timed": {
+							"type": "zero",
+							"board": "lc2",
+							"packet": 100
+						},
+						"fuel-timed": {
+							"type": "zero",
+							"board": "lc2",
+							"packet": 100
+						}
+					},
+					"safe": true
+				},
+				{
+					"type": null
+				}
+			]
+		},
+		"$components/e_vents.jsonc"
 	]
 }
