--- a/config/influx_map.jsonc
+++ b/config/influx_map.jsonc
@@ -96,36 +96,36 @@
 	"ac2.acSupply24Power": "ac2Supply24Power",
 
 	"ac2.actuatorState0": "nitrousEmergencyVentState",
-	"ac2.actuatorState1": "nitrousDump0State",
+	"ac2.actuatorState1": "nitrousDrain0State",
 	"ac2.actuatorState2": "ethaneEmergencyVentState",
-	"ac2.actuatorState3": "ethaneDump0State",
-	"ac2.actuatorState4": "nitrousDump1State",
-	"ac2.actuatorState5": "ethaneDump1State",
+	"ac2.actuatorState3": "ethaneDrain0State",
+	"ac2.actuatorState4": "nitrousDrain1State",
+	"ac2.actuatorState5": "ethaneDrain1State",
 	"ac2.actuatorState6": "",
 	"ac2.actuatorState7": "",
 
 	"ac2.actuatorContinuity0": "nitrousEmergencyVentContinuity",
-	"ac2.actuatorContinuity1": "nitrousDumpContinuity",
+	"ac2.actuatorContinuity1": "nitrousDrainContinuity",
 	"ac2.actuatorContinuity2": "ethaneEmergencyVentContinuity", 
-	"ac2.actuatorContinuity3": "ethaneDumpContinuity",
+	"ac2.actuatorContinuity3": "ethaneDrainContinuity",
 	"ac2.actuatorContinuity4": "",
 	"ac2.actuatorContinuity5": "",
 	"ac2.actuatorContinuity6": "",
 	"ac2.actuatorContinuity7": "",
 
 	"ac2.actuatorCurrent0": "nitrousEmergencyVentCurrent",
-	"ac2.actuatorCurrent1": "nitrousDumpCurrent",
+	"ac2.actuatorCurrent1": "nitrousDrainCurrent",
 	"ac2.actuatorCurrent2": "ethaneEmergencyVentCurrent", 
-	"ac2.actuatorCurrent3": "ethaneDumpCurrent",
+	"ac2.actuatorCurrent3": "ethaneDrainCurrent",
 	"ac2.actuatorCurrent4": "",
 	"ac2.actuatorCurrent5": "",
 	"ac2.actuatorCurrent6": "",
 	"ac2.actuatorCurrent7": "",
 
 	"ac2.potentiometer0": "nitrousEmergencyVentPot",
-	"ac2.potentiometer1": "nitrousDumpPot",
+	"ac2.potentiometer1": "nitrousDrainPot",
 	"ac2.potentiometer2": "ethaneEmergencyVentPot", 
-	"ac2.potentiometer3": "ethaneDumpPot",
+	"ac2.potentiometer3": "ethaneDrainPot",
 	"ac2.potentiometer4": "",
 	"ac2.potentiometer5": "",
 	"ac2.potentiometer6": "",
