--- a/config/hotfire_controls_window.jsonc
+++ b/config/hotfire_controls_window.jsonc
@@ -85,7 +85,7 @@
 					{
 						"id": "ethaneFill",
 						"type": "timed",
-						"name": "Ethane Fill RBV",
+						"name": "Ethane Fill Line",
 						"field": "ac3.actuatorState7",
 						"actions": {
 							"enable": {
@@ -119,7 +119,7 @@
 					{
 						"id": "ethaneLineVent",
 						"type": "valve",
-						"name": "Ethane Line Vent",
+						"name": "Ethane Fill Line Vent",
 						"field": "ac3.actuatorState6",
 						"actions": {
 							"enable": {
@@ -236,7 +236,7 @@
 					{
 						"id": "nitrousFill",
 						"type": "timed",
-						"name": "Nitrous Fill RBV",
+						"name": "Nitrous Fill Line",
 						"field": "ac3.actuatorState5",
 						"actions": {
 							"enable": {
@@ -270,7 +270,7 @@
 					{
 						"id": "nitrousLineVent",
 						"type": "valve",
-						"name": "Nitrous Line Vent",
+						"name": "Nitrous Fill Line Vent",
 						"field": "ac3.actuatorState4",
 						"actions": {
 							"enable": {
@@ -382,9 +382,9 @@
 				"buttons": 
 				[
 					{
-						"id": "ethaneDump",
+						"id": "ethaneDrain",
 						"type": "valve",
-						"name": "Ethane Dump",
+						"name": "Ethane Drain",
 						"field": "ac2.actuatorState3",
 						"actions": {
 							"enable": {
@@ -404,9 +404,9 @@
 						"safe": true
 					},
 					{
-						"id": "nitrousDump",
+						"id": "nitrousDrain",
 						"type": "valve",
-						"name": "Nitrous Dump",
+						"name": "Nitrous Drain",
 						"field": "ac2.actuatorState1",
 						"actions": {
 							"enable": {
